Performance optimizations
git-svn-id: file:///home/svn/repos/tigase-xmltools/trunk@345 00b2b5fc-311a-0410-90ea-96fce9c84a0d